--- a/notebooks_messy/Experiment.ipynb
+++ b/notebooks_messy/Experiment.ipynb
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 135,
    "id": "9321f581-3f9d-404a-8689-0f7f279596c0",
    "metadata": {
     "tags": []
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 129,
    "id": "9dd2dc13",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:08:15.450__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T13:19:41.373__pomdp_trace.jld.\n"
      ]
     },
     {
@@ -644,7 +644,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 133,
    "id": "31143f7c-4f46-4aa9-a409-63fcf112224d",
    "metadata": {
     "tags": []
@@ -685,7 +685,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:08:36.342__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T13:19:58.685__pomdp_trace.jld.\n"
      ]
     },
     {
@@ -694,7 +694,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,42 +725,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 136,
    "id": "82e17666-8874-4c0e-abea-338c63a99a91",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:08:43.230__pomdp_trace.jld.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:09:43.844__pomdp_trace.jld.\n",
-      "Trace & viz actions serialized to saves/2023-12-14T13:09:43.893__pomdp_trace.jld.\n",
-      "Trace & viz actions serialized to saves/2023-12-14T13:09:43.934__pomdp_trace.jld.\n",
-      "Trace & viz actions serialized to saves/2023-12-14T13:09:43.974__pomdp_trace.jld.\n",
-      "Trace & viz actions serialized to saves/2023-12-14T13:09:44.013__pomdp_trace.jld.\n",
-      "Trace & viz actions serialized to saves/2023-12-14T13:09:44.053__pomdp_trace.jld.\n",
-      "Trace & viz actions serialized to saves/2023-12-14T13:09:44.096__pomdp_trace.jld.\n",
-      "Trace & viz actions serialized to saves/2023-12-14T13:09:44.135__pomdp_trace.jld.\n"
-     ]
     }
    ],
    "source": [
@@ -808,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 137,
    "id": "2b1a6e6f",
    "metadata": {},
    "outputs": [],
@@ -821,17 +800,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 138,
    "id": "b3a8a204",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-14T13:21:36.934__pomdp_trace.jld.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 139,
    "id": "941613b6",
    "metadata": {},
    "outputs": [],
@@ -875,17 +861,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 140,
    "id": "af5831bb",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-14T13:24:49.136__pomdp_trace.jld.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -893,7 +886,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:13:06.510__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T13:27:48.268__pomdp_trace.jld.\n"
      ]
     }
    ],
@@ -923,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 141,
    "id": "e8f16db5",
    "metadata": {},
    "outputs": [],
@@ -936,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 144,
    "id": "c48ae4c5",
    "metadata": {},
    "outputs": [
@@ -944,7 +937,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:13:47.169__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T13:29:24.615__pomdp_trace.jld.\n"
      ]
     },
     {
@@ -953,7 +946,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 145,
    "id": "0b14bc20",
    "metadata": {},
    "outputs": [
@@ -984,7 +977,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:13:50.194__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T13:29:30.131__pomdp_trace.jld.\n"
      ]
     },
     {
@@ -993,7 +986,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1001,11 +994,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:14:48.411__pomdp_trace.jld.\n",
-      "Trace & viz actions serialized to saves/2023-12-14T13:14:48.454__pomdp_trace.jld.\n",
-      "Trace & viz actions serialized to saves/2023-12-14T13:14:48.496__pomdp_trace.jld.\n",
-      "Trace & viz actions serialized to saves/2023-12-14T13:14:48.538__pomdp_trace.jld.\n",
-      "Trace & viz actions serialized to saves/2023-12-14T13:14:48.578__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T13:30:13.391__pomdp_trace.jld.\n"
      ]
     }
    ],
@@ -1035,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 146,
    "id": "46028ac2",
    "metadata": {},
    "outputs": [],
@@ -1048,17 +1037,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 147,
    "id": "9143b84f",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-14T13:30:15.630__pomdp_trace.jld.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1066,7 +1062,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:15:31.925__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T13:33:19.723__pomdp_trace.jld.\n"
      ]
     }
    ],
@@ -1141,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 149,
    "id": "665b91b1-9622-41ed-b963-3bee730df746",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1147,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1183,8 @@
     "    # \"saves/2023-12-13T16:01:02.929__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-13T16:00:27.357__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-13T18:21:53.015__pomdp_trace.jld\",\n",
-    "    \"saves/2023-12-13T18:14:18.649__pomdp_trace.jld\",\n",
+    "    # \"saves/2023-12-13T18:14:18.649__pomdp_trace.jld\",\n",
+    "    \"saves/2023-12-14T13:33:19.723__pomdp_trace.jld\",\n",
     "\n",
     "    # clean version - saves/2023-12-12T20:52:10.206__pomdp_trace.jld\n",
     "    # noisy version - saves/2023-12-12T20:49:13.392__pomdp_trace.jld\n",
