--- a/notebooks_messy/Experiment.ipynb
+++ b/notebooks_messy/Experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "492e53e5-cb13-4af6-9690-759b95a8b5e3",
    "metadata": {
     "tags": []
@@ -24,12 +24,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0e512ae8-ea79-4857-8610-e960f93ad6e3",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling Makie [ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling Gen [ea4f424c-a589-11e8-07c0-fd5c91b9da4a]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling GenParticleFilters [56b76ac4-72ef-411e-b419-6d312ed86a6f]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling GridWorlds [c15fd557-8ec5-4bf9-9d87-df57ac477796]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling LineWorlds [378ae85f-3ccf-4c92-8c74-de8c49c343b8]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling FileIOExt [f5f51d8f-5827-5d2e-939b-192fcd6ec70c]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling GeometryBasicsExt [b238bd29-021f-5edc-8b0e-16b9cda5f63a]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling IJuliaExt [2f4121a4-3b3a-5ce6-9c5e-1f2673ce168a]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling GenPOMDPs [f88df91c-fa0e-46d7-b73d-4420684e5acb]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling Tasks2D [d49a4b09-0ba2-4df1-b547-2796ddccb60c]\n"
+     ]
+    }
+   ],
    "source": [
     "import Makie   # Visualization Library\n",
     "using Revise      # For development; makes it so modifications\n",
@@ -49,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f55630a1",
    "metadata": {},
    "outputs": [],
@@ -59,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "5c0fea3a-5748-479d-a252-85de2bbcb9c7",
    "metadata": {
     "tags": []
@@ -78,7 +95,7 @@
        "Main.Utils.MappedUniform()"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,12 +107,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "313c14b7-1f1d-4698-b01c-eec1933bb749",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling GLMakie [e9467ef8-e4e7-5192-8a1a-b1aee30e663a]\n"
+     ]
+    }
+   ],
    "source": [
     "import GLMakie\n",
     "GLMakie.activate!()"
@@ -111,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2a9f0278-b761-4322-ad3f-3d415bec205c",
    "metadata": {},
    "outputs": [
@@ -121,7 +146,7 @@
        "var\"##StaticGenFunction_uniform_agent_pos#317\"(Dict{Symbol, Any}(), Dict{Symbol, Any}())"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "079c3b8b-48cc-4212-ae81-820c3af3df04",
    "metadata": {},
    "outputs": [
@@ -157,7 +182,7 @@
        "handle_wall_intersection (generic function with 1 method)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "efcc51e8-203a-4d6b-8bfe-3eb6580aae73",
    "metadata": {},
    "outputs": [
@@ -219,7 +244,7 @@
        "var\"##StaticGenFunction_motion_model#355\"(Dict{Symbol, Any}(), Dict{Symbol, Any}())"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "0ce69a83-8fa6-4eca-af79-de37fc5a1d16",
    "metadata": {},
    "outputs": [
@@ -259,7 +284,7 @@
        "DynamicDSLFunction{Any}(Dict{Symbol, Any}(), Dict{Symbol, Any}(), Type[Any, Any], false, Union{Nothing, Some{Any}}[nothing, nothing], var\"##observe_noisy_distances#363\", Bool[0, 0], false)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "5837a12e-5eb7-46da-b4d4-e344f35e8fd9",
    "metadata": {
     "tags": []
@@ -337,7 +362,7 @@
        "GenPOMDPs.GenPOMDP(var\"##StaticGenFunction_uniform_agent_pos#317\"(Dict{Symbol, Any}(), Dict{Symbol, Any}()), var\"##StaticGenFunction_motion_model#355\"(Dict{Symbol, Any}(), Dict{Symbol, Any}()), DynamicDSLFunction{Any}(Dict{Symbol, Any}(), Dict{Symbol, Any}(), Type[Any, Any], false, Union{Nothing, Some{Any}}[nothing, nothing], var\"##observe_noisy_distances#363\", Bool[0, 0], false), var\"#69#70\"())"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "204c2329-a938-4e58-aac0-c81737db7168",
    "metadata": {
     "tags": []
@@ -366,7 +391,7 @@
        "GenPOMDPs.var\"##StaticGenFunction__ControlledTrajectoryModel#435\"(Dict{Symbol, Any}(), Dict{Symbol, Any}())"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "12a7671c-410e-4012-9e5c-d008bf4196ae",
    "metadata": {
     "tags": []
@@ -482,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "b07fe72c",
    "metadata": {},
    "outputs": [],
@@ -499,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "503d089d-b461-4115-9b73-f726dafe279a",
    "metadata": {
     "tags": []
@@ -579,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "9321f581-3f9d-404a-8689-0f7f279596c0",
    "metadata": {
     "tags": []
@@ -594,6 +619,12 @@
   },
   {
    "cell_type": "markdown",
+   "id": "618c0857",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "33cb25c8",
    "metadata": {},
    "source": [
@@ -602,24 +633,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "id": "9dd2dc13",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace & viz actions serialized to saves/2023-12-16T17:08:32.819__pomdp_trace.jld.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 58,
    "id": "31143f7c-4f46-4aa9-a409-63fcf112224d",
    "metadata": {
     "tags": []
@@ -660,7 +684,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-16T17:08:54.053__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-17T12:06:03.464__pomdp_trace.jld.\n"
      ]
     },
     {
@@ -669,7 +693,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 41,
    "id": "665b91b1-9622-41ed-b963-3bee730df746",
    "metadata": {},
    "outputs": [
@@ -1131,9 +1155,16 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-16T17:21:09.530__pomdp_trace.jld.\n"
+     ]
     }
    ],
    "source": [
